--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
     </div>
 
-    <script src="./assets/app.js"></script>
+    <script type="module" src="./assets/app.js"></script>
 </body>
 </html>
